[DATALAD RUNCMD] run codespell throughout fixing typos automagically (but ignoring overall fail due to ambigous ones)
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w || :",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/datasets/aodn_satellite_net_primary_productivity_gsm_1day_aqua.yaml
+++ b/datasets/aodn_satellite_net_primary_productivity_gsm_1day_aqua.yaml
@@ -22,7 +22,7 @@ Description: "The Aqua satellite platform carries a MODIS sensor that observes s
   \ in \u201CChapter 11, and references therein, of IOCCG Report 5, 2006, (http://ioccg.org/wp-content/uploads/2015/10/ioccg-report-05.pdf).\
   \ This product is recommended for use in the VGPM model. The product Eppley_NPP_chl_gsm\
   \ is experimental, in the sense that it is challenging to validate due to the scarcity\
-  \ of insitu measurments. It should only be used with caution informed by understanding\
+  \ of insitu measurements. It should only be used with caution informed by understanding\
   \ of the algorithms."
 Documentation: https://catalogue-imos.aodn.org.au/geonetwork/srv/eng/catalog.search#/metadata/27cc65c0-d453-4ba3-a0d6-55e4449fee8c
 Contact: info@aodn.org.au
