--- a/datasets/apd_galaxysegmentation.yaml
+++ b/datasets/apd_galaxysegmentation.yaml
@@ -13,7 +13,7 @@ Tags:
   - NASA SMD AI
 License: There are no restrictions on the use of this data.
 Resources: 
-  - Description: NASA APD Galaxy Sementation dataset consisting of astronomical FITS data format images
+  - Description: NASA APD Galaxy Segmentation dataset consisting of astronomical FITS data format images
     ARN: arn:aws:s3:::nasa-apd-galaxysegment
     Region: us-west-2
     Type: S3 Bucket
