--- a/datasets/argo-gdac-marinedata.yaml
+++ b/datasets/argo-gdac-marinedata.yaml
@@ -36,7 +36,7 @@ DataAtWork:
       URL: https://argo.ucsd.edu/outreach/
       AuthorName: Argo program
       AuthorURL: https://argo.ucsd.edu
-    - Title: Outreach ressources for Argo floats
+    - Title: Outreach resources for Argo floats
       URL: https://www.euro-argo.eu/Outreach/Outreach-material/Outreach-resources-about-Argo-floats
       AuthorName: Euro-Argo ERIC
       AuthorURL: https://www.euro-argo.eu
