--- a/datasets/bhl-open-data.yaml
+++ b/datasets/bhl-open-data.yaml
@@ -12,7 +12,7 @@ Tags:
   - biodiversity
   - bioinformatics
   - life sciences
-License: Public Domain, CC0, or Creative Commons. Exact licenses are found in the related metadta files and <a href="https://github.com/gbhl/bhl-open-data">documentation</a>.
+License: Public Domain, CC0, or Creative Commons. Exact licenses are found in the related metadata files and <a href="https://github.com/gbhl/bhl-open-data">documentation</a>.
 Citation: 
 Resources:
   - Description: Image files (JPEG-2000) and associated metadata describing the image and the book or article that contains the image.
