--- a/datasets/biolip.yaml
+++ b/datasets/biolip.yaml
@@ -13,7 +13,7 @@ Tags:
   - life sciences
   - chemistry
 License: No explicit license stated (publicly available for academic and research use).
-Citation: "Chengxin Zhang, Xi Zhang, Peter L Freddolino, and Yang Zhang. BioLiP2: an updated structure database for biologically relevent ligand-protein interactions, Nucleic Acids Research, gkad630 (2023)."
+Citation: "Chengxin Zhang, Xi Zhang, Peter L Freddolino, and Yang Zhang. BioLiP2: an updated structure database for biologically relevant ligand-protein interactions, Nucleic Acids Research, gkad630 (2023)."
 Resources:
   - Description: BioLiP dataset
     ARN: arn:aws:s3:::biolip
