--- a/datasets/boltz1.yaml
+++ b/datasets/boltz1.yaml
@@ -3,7 +3,7 @@ Description: |
   This is the data used to train the Boltz-1 model. It contains the following datasets:
     - Our pre-processed version of the Protein Data Bank
     - Our pre-processed version of the multiple sequence alignment data for each protein chain
-    - The raw multiple sequence alginment data.
+    - The raw multiple sequence alignment data.
     - A pre-computed symmetry file for symmetry correction during training
 Documentation: https://github.com/jwohlwend/boltz/blob/main/docs/training.md
 Contact: jwohlwend@csail.mit.edu
