--- a/datasets/cellpainting-gallery.yaml
+++ b/datasets/cellpainting-gallery.yaml
@@ -59,7 +59,7 @@ DataAtWork:
       URL: https://forum.image.sc
       AuthorName: Multiple Authors
       AuthorURL: https://openbioimageanalysis.org
-    - Title: Center for Open Bioimage Analysis (COBA) YouTube Channel - video tutorials of CellProfiler and other softwares
+    - Title: Center for Open Bioimage Analysis (COBA) YouTube Channel - video tutorials of CellProfiler and other software
       URL: https://www.youtube.com/c/COBACenterforOpenBioimageAnalysis/videos
       AuthorName: Multiple Authors
       AuthorURL: https://openbioimageanalysis.org
