--- a/datasets/deafrica-ndvi_climatology_ls.yaml
+++ b/datasets/deafrica-ndvi_climatology_ls.yaml
@@ -1,11 +1,11 @@
 Name: Digital Earth Africa Normalised Difference Vegetation Index (NDVI) Climatology
 Description: |
-  Digital Earth Africa’s NDVI climatology product represents the long-term average baseline condition of vegetation for every Landsat pixel over the African continent. Both mean and standard deviation NDVI climatologies are available for each calender month.
+  Digital Earth Africa’s NDVI climatology product represents the long-term average baseline condition of vegetation for every Landsat pixel over the African continent. Both mean and standard deviation NDVI climatologies are available for each calendar month.
   
   Some key features of the product are:
 
     - NDVI climatologies were developed using harmonized Landsat 5,7,and 8 satellite imagery.
-    - Mean and standard deviation NDVI climatologies are produced for each calender month, using a temporal baseline period from 1984-2020 (inclusive)
+    - Mean and standard deviation NDVI climatologies are produced for each calendar month, using a temporal baseline period from 1984-2020 (inclusive)
     - Datasets have a spatial resolution of 30 metres
 
   
