--- a/datasets/epa-edde-v2.yaml
+++ b/datasets/epa-edde-v2.yaml
@@ -94,7 +94,7 @@ Citation: >-
 Resources:
   - Description: >-
       EDDE data are compressed netCDF (https://unidata.ucar.edu/software/netcdf/)
-      files that conform to Climate and Forecast (CF) metdata conventions 
+      files that conform to Climate and Forecast (CF) metadata conventions 
       (https://cfconventions.org). The data can be ingested, processed, and
       visualized using standard netCDF utility routines in various programming
       languages. Information on the model projection and grid structure is contained
