--- a/datasets/humor-detection.yaml
+++ b/datasets/humor-detection.yaml
@@ -4,9 +4,9 @@ Description: |
   The dataset contains 3 csv files: [Humorous.csv](https://humor-detection-pds.s3-us-west-2.amazonaws.com/Humorous.csv) 
   containing the humorous product questions, 
   [Non-humorous-unbiased.csv](https://humor-detection-pds.s3-us-west-2.amazonaws.com/Non-humorous-unbiased.csv) containing 
-  the non-humorous prodcut questions from the same products as the humorous one, and, 
+  the non-humorous product questions from the same products as the humorous one, and, 
   [Non-humorous-biased.csv](https://humor-detection-pds.s3-us-west-2.amazonaws.com/Non-humours-biased.csv) containing 
-  the non-humorous prodcut questions from randomly selected products. 
+  the non-humorous product questions from randomly selected products. 
   Each file has the question, product description, image url to the product, 
   and a label if the question is humorous or not.
 Documentation: https://humor-detection-pds.s3-us-west-2.amazonaws.com/README.txt
