--- a/datasets/hycom-gofs-3pt1-reanalysis.yaml
+++ b/datasets/hycom-gofs-3pt1-reanalysis.yaml
@@ -1,5 +1,5 @@
 Name: HYbrid Coordinate Ocean Model Global Ocean Forecast System Reanalysis 
-Description: "Global Ocean Forecasting System (GOFS) 3.1 output on the GLBv0.08 grid. The resolution is 0.08° resolution between 40°S and 40°N, 0.04° poleward of these latitudes. The temportal frequenct is 3 hourly. This data was created by the Naval Research Laboratory: Ocean Dynamics and Prediction Branch."
+Description: "Global Ocean Forecasting System (GOFS) 3.1 output on the GLBv0.08 grid. The resolution is 0.08° resolution between 40°S and 40°N, 0.04° poleward of these latitudes. The temporal frequenct is 3 hourly. This data was created by the Naval Research Laboratory: Ocean Dynamics and Prediction Branch."
 Documentation: https://www.hycom.org/dataserver/gofs-3pt1/reanalysis
 Contact: help@hycom.org
 ManagedBy: "[COAPS](https://www.coaps.fsu.edu/)"
