--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -67,7 +67,7 @@ Resources:
     RequesterPays: False
     Explore:
     - '[Browse Bucket](https://kyfromabove.s3.us-west-2.amazonaws.com/index.html#elevation/KyTopoMapSeries/)'
-  - Description: LiDAR-derived Point Cloud tiles for the Commonwealth of Kentucky organized in a 5000x5000 foot grid. There  currently two complete resources in this folder -  1) Phase 1 LiDAR-derived point clouds in LAZ format and 2) Phase 2 LiDAR-derived Point Clouds in COPC format. Phase 3 is partially availabe in COPC format while efforts are still ongoing.
+  - Description: LiDAR-derived Point Cloud tiles for the Commonwealth of Kentucky organized in a 5000x5000 foot grid. There  currently two complete resources in this folder -  1) Phase 1 LiDAR-derived point clouds in LAZ format and 2) Phase 2 LiDAR-derived Point Clouds in COPC format. Phase 3 is partially available in COPC format while efforts are still ongoing.
     ARN: arn:aws:s3:::kyfromabove/elevation/PointCloud/
     Region: us-west-2
     Type: S3 Bucket
