--- a/datasets/lwi-model-data.yaml
+++ b/datasets/lwi-model-data.yaml
@@ -53,7 +53,7 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse the bucket](https://lwi-model-data.s3.amazonaws.com/index.html)'
-    - '[Disover the data and models. The ID of the resources can be used to explore the data on the AWS bucket.](https://lwi.endmc.org/)'
+    - '[Discover the data and models. The ID of the resources can be used to explore the data on the AWS bucket.](https://lwi.endmc.org/)'
 DataAtWork:
   Tutorials:
     - Title: ENDMC Documentation
