--- a/datasets/met-office-nws-ocean.yaml
+++ b/datasets/met-office-nws-ocean.yaml
@@ -7,7 +7,7 @@ Description: |
   - Salinity<br/>
   - Temperature<br/>
   - Mixing Layer Thickness
-Documentation: hhttps://www.metoffice.gov.uk/binaries/content/assets/metofficegovuk/pdf/data/amm15-data-product-sheet.pdf
+Documentation: https://www.metoffice.gov.uk/binaries/content/assets/metofficegovuk/pdf/data/amm15-data-product-sheet.pdf
 Contact: servicedesk@metoffice.gov.uk. Service desk is only available Mon – Fri, 09:00 until 17:00 UTC (-1 hour during BST).  As a non-operational service we aim to respond to any service support enquiries within 3-5 business days.
 ManagedBy: "[Met Office](https://www.metoffice.gov.uk/)"
 UpdateFrequency: The NWS Ocean model runs once daily.
