--- a/datasets/monkey.yaml
+++ b/datasets/monkey.yaml
@@ -21,7 +21,7 @@ Tags:
   - machine learning
 License: CC BY-NC-SA 4.0  
 Resources:
-  - Description: PAS- and IHC-stained whole slide images with corresponding dot annotaions for inflammatory cells (monocytes and lymphocytes) in regions of interest.
+  - Description: PAS- and IHC-stained whole slide images with corresponding dot annotations for inflammatory cells (monocytes and lymphocytes) in regions of interest.
     ARN: arn:aws:s3:::monkey-training
     Region: us-west-2
     Type: S3 Bucket
