--- a/datasets/ndui.yaml
+++ b/datasets/ndui.yaml
@@ -2,7 +2,7 @@ Name: Normalized Difference Urban Index (NDUI)
 Description: NDUI is combined with cloud shadow-free Landsat Normalized
              Difference Vegetation Index (NDVI) composite and DMSP/OLS Night Time Light (NTL)
              to characterize global urban areas at a 30 m resolution,and it can greatly enhance urban areas,
-             which can then be easily distinguished from bare lands including fallows and deserts.
+             which can then be easily distinguished from bare lands including follows and deserts.
              With the capability to delineate urban boundaries and, at the same time,
              to present sufficient spatial details within urban areas, the  NDUI has the potential
              for urbanization studies at regional and global scales.
