--- a/datasets/nz-elevation.yaml
+++ b/datasets/nz-elevation.yaml
@@ -21,7 +21,7 @@ Tags:
   - geospatial
 
 License: Toitū Te Whenua Land Information New Zealand does not own the copyright for all of the elevation data that is available in this bucket. Licensors are contained in the STAC Collection file accompanying each elevation data survey. Licensed for re-use under "[CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/)".
-Citation: Licensed by (insert the licensor) for re-use under [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/).
+Citation: Licensed by (insert the licensor) for reuse under [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/).
 
 Resources:
   - Description: New Zealand Elevation with accompanying metadata
