--- a/datasets/ons-opendata-portal.yaml
+++ b/datasets/ons-opendata-portal.yaml
@@ -48,7 +48,7 @@ Resources:
     Type: S3 Bucket  
     Explore: 
           - '[Browse Dataset](https://dados.ons.org.br/dataset/carga-energia-programada)'
-  - Description: "Verfied energy charge (PT-BR Carga de energia verificada)"
+  - Description: "Verified energy charge (PT-BR Carga de energia verificada)"
     ARN: arn:aws:s3:::ons-aws-prod-opendata
     Region: sa-east-1
     Type: S3 Bucket  
@@ -198,7 +198,7 @@ Resources:
     Type: S3 Bucket  
     Explore: 
           - '[Browse Dataset](https://dados.ons.org.br/dataset/fator-capacidade-2)'
-  - Description: "Commercial generation for international export (PT-BR Geração Comercial Para Exportação Internacional)"
+  - Description: "Commercial generation for international export (PT-BR Geração Commercial Para Exportação Internacional)"
     ARN: arn:aws:s3:::ons-aws-prod-opendata
     Region: sa-east-1
     Type: S3 Bucket  
@@ -222,7 +222,7 @@ Resources:
     Type: S3 Bucket  
     Explore: 
           - '[Browse Dataset](https://dados.ons.org.br/dataset/grandezas_fluviometricas)'
-  - Description: "Import of energy in commercial mode per block (PT-BR Importação de energia na modalidade comercial por bloco)"
+  - Description: "Import of energy in commercial mode per block (PT-BR Importação de energia na modalidade commercial por bloco)"
     ARN: arn:aws:s3:::ons-aws-prod-opendata
     Region: sa-east-1
     Type: S3 Bucket  
@@ -270,7 +270,7 @@ Resources:
     Type: S3 Bucket  
     Explore: 
           - '[Browse Dataset](https://dados.ons.org.br/dataset/ind_disponibilidade_ft_trlt)'  
-  - Description: "Performance indicator of generation functions per generating unit on an yearly basis (PT-BR Indicadores de desempenho das funções geração por unidade geradora em base anual)"
+  - Description: "Performance indicator of generation functions per generating unit on an yearly basis (PT-BR Indicadores de desempenho das funções geração por unidade geradora em base annual)"
     ARN: arn:aws:s3:::ons-aws-prod-opendata
     Region: sa-east-1
     Type: S3 Bucket  
