--- a/datasets/open-ceda.yaml
+++ b/datasets/open-ceda.yaml
@@ -1,7 +1,7 @@
 Name: Open CEDA by Watershed
 Description: |
   CEDA is a multi-regional Environmentally-Extended Input-Output (EEIO) model developed to support a wide range of environmental systems analyses—including corporate carbon accounting and sustainable spend analysis. CEDA provides unparalleled global coverage and granularity, representing 95% of the world's GDP across 148 countries and 400 sectors, enabling robust and geographically comprehensive Scope 3 greenhouse gas (GHG) measurement. 
-  Open CEDA is the publicly avaialable version of CEDA, now easy to download and available for free for all use cases. For more information please visit our website at openceda.org.
+  Open CEDA is the publicly available version of CEDA, now easy to download and available for free for all use cases. For more information please visit our website at openceda.org.
   This data registry entry contains CEDA 2025 and CEDA 2024 in two separate files. CEDA 2025, the latest version of CEDA, uses 2023 as its base year, ensuring that emissions factors and economic data reflect the most recent global economic landscape available. To maintain accuracy and relevance, CEDA is updated annually with the latest data releases.
   At its core, CEDA connects economic exchanges to GHG emissions by quantifying the life-cycle emissions of products and services. This is achieved through the integration of input-output tables, which represent the full supply-chain network of the global economy, with GHG emissions data. As a result, CEDA provides users with a powerful tool to assess the environmental impacts embedded in corporate value chains.
 Documentation: https://openceda.org/
@@ -30,7 +30,7 @@ Resources:
       - "[Open CEDA](https://open-ceda.s3.amazonaws.com/index.html)"
 DataAtWork:
   Tutorials:
-    - Title: For a tutoral please download the CEDA Methodology Documentation on the openceda.org website.
+    - Title: For a tutorial please download the CEDA Methodology Documentation on the openceda.org website.
       URL: https://openceda.org/
       AuthorName: Watershed Technology
   Publications:
