--- a/datasets/openaerialmap.yaml
+++ b/datasets/openaerialmap.yaml
@@ -45,7 +45,7 @@ DataAtWork:
       URL: https://docs.openaerialmap.org/api/api/
       AuthorName: Humanitarian OpenStreetMap Team
       AuthorURL: https://www.hotosm.org/
-    - Title: OpenAerialMap Broswer for exploring and accessing imagery
+    - Title: OpenAerialMap Browser for exploring and accessing imagery
       URL: https://map.openaerialmap.org/
       AuthorName: Humanitarian OpenStreetMap Team
       AuthorURL: https://www.hotosm.org/
