--- a/datasets/sentinel-1-rtc-indigo.yaml
+++ b/datasets/sentinel-1-rtc-indigo.yaml
@@ -1,7 +1,7 @@
 Name: Analysis Ready Sentinel-1 Backscatter Imagery
 Description: |
   The [Sentinel-1 mission](https://sentinel.esa.int/web/sentinel/missions/sentinel-1) is a constellation of
-  C-band Synthetic Aperature Radar (SAR) satellites from the European Space Agency launched since 2014.
+  C-band Synthetic Aperture Radar (SAR) satellites from the European Space Agency launched since 2014.
   These satellites collect observations of radar backscatter intensity day or night, regardless of the
   weather conditions, making them enormously valuable for environmental monitoring.
   These radar data have been processed from original Ground Range Detected (GRD) scenes into a Radiometrically
