--- a/datasets/st-open-data.yaml
+++ b/datasets/st-open-data.yaml
@@ -3,7 +3,7 @@ Description: |
   SpaceEye-T satellite collects the highest resolution optical imagery among the commercial satellites, 25 cm resolution. The Open Data features various satellite images around the world for end users to experience the power of VVHR optical data.
 Documentation: https://www.si-imaging.com/page/72?sca=SpaceEye-T
 Contact: https://www.si-imaging.com
-UpdateFrequency: The dataset is frequently updated. The frequent updates include the time-series data for regular monitoring, and the data for disaster management. SI Imaging wants to provide the user expierence on what is possible with VVHR optical satellite data. If you have a suggestion for a new location, feedback on the dataset, or any questions, contact us.
+UpdateFrequency: The dataset is frequently updated. The frequent updates include the time-series data for regular monitoring, and the data for disaster management. SI Imaging wants to provide the user experience on what is possible with VVHR optical satellite data. If you have a suggestion for a new location, feedback on the dataset, or any questions, contact us.
 Tags:
   - aws-pds
   - satellite imagery
