--- a/datasets/amazon-last-mile-challenges.yaml
+++ b/datasets/amazon-last-mile-challenges.yaml
@@ -29,7 +29,7 @@ License: "Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. The
 Citation: "Merchan, Daniel; Arora, Jatin; Pachon, Julian; Konduri, Karthik; Winkenbach, Matthias; Parks, Steven; Noszek, Joseph (2022). Transportation Science."
 
 Resources:
-  - Description: "Dataset including training and testing data. Folder almrrc2021_data_training includes 6,112 historical routes used for model traning; folder almrrc2021_data_evaluation includes 3072 historical routes used for model evaluation. All routes correspond to year 2018. Please refer to the Tranportation Science article  (https://pubsonline.informs.org/doi/10.1287/trsc.2022.1173) for a comprehensive description of the dataset, and to this documentation page (https://github.com/MIT-CAVE/rc-cli/blob/main/templates/data_structures.md) for details on data structure and format."
+  - Description: "Dataset including training and testing data. Folder almrrc2021_data_training includes 6,112 historical routes used for model training; folder almrrc2021_data_evaluation includes 3072 historical routes used for model evaluation. All routes correspond to year 2018. Please refer to the Tranportation Science article  (https://pubsonline.informs.org/doi/10.1287/trsc.2022.1173) for a comprehensive description of the dataset, and to this documentation page (https://github.com/MIT-CAVE/rc-cli/blob/main/templates/data_structures.md) for details on data structure and format."
     ARN: arn:aws:s3:::amazon-last-mile-challenges
     Region: us-west-2
     Type: S3 Bucket
