--- a/datasets/cmip6.yaml
+++ b/datasets/cmip6.yaml
@@ -4,7 +4,7 @@ Description: |
   <br /><br />
 Documentation: https://pangeo-data.github.io/pangeo-cmip6-cloud/, https://www.wcrp-climate.org/wgcm-cmip/wgcm-cmip6
 Contact: |
-  If you have any feedback on the CMIP6 data available on AWS please email sustainability-data-initiative@amazon.com. We are acepting requests for additional CMIP6 variables and/or models to be made available to AWS but cannot guarantee that your request will be fulfilled. We will prioritize requests that bring value to the largest number of users. Note that we are not providing technical support through this email account.<br/><br/>
+  If you have any feedback on the CMIP6 data available on AWS please email sustainability-data-initiative@amazon.com. We are accepting requests for additional CMIP6 variables and/or models to be made available to AWS but cannot guarantee that your request will be fulfilled. We will prioritize requests that bring value to the largest number of users. Note that we are not providing technical support through this email account.<br/><br/>
   We also seek to identify case studies on how CMIP6 data is being used and will be featuring those stories in future publications and events. If you are interested in seeing your story highlighted, please share it with the ASDI team here: sustainability-data-initiative@amazon.com.
 ManagedBy: "ESGF and Pangeo"
 UpdateFrequency: "Core CMIP6 datasets are added as soon as they are available."
