--- a/datasets/depmap-omics-ccle.yaml
+++ b/datasets/depmap-omics-ccle.yaml
@@ -1,5 +1,5 @@
 Name: The Cancer Dependency Map (DepMap) Cancer Cell Line Encyclopedia (CCLE) Dataset
-Description: This dataset consists of whole genome sequencing (WGS), whole exome sequencing (WES), and RNA sequencing files generated from ~1000 cancer cell lines described in Ghandi et al., 2019.
+Description: This dataset consists of whole genome sequencing (WGS), whole exome sequencing (WES), and RNA sequencing files generated from ~1000 cancer cell lines described in Gandhi et al., 2019.
 Documentation: https://github.com/broadinstitute/depmap-omics-ccle
 Contact: https://forum.depmap.org
 ManagedBy: "[Cancer Data Science](https://cancerdatascience.org/), [Broad Institute](https://www.broadinstitute.org/)"
