--- a/datasets/fm-ad.yaml
+++ b/datasets/fm-ad.yaml
@@ -35,7 +35,7 @@ DataAtWork:
       URL: https://www.ncbi.nlm.nih.gov/pubmed?cmd=DetailsSearch&term=28235761[PMID]
       AuthorName: |
         Ryan J. Hartmaier, Lee A. Albacker, Juliann Chmielecki, Mark Bailey, Jie He, Michael E.
-        Goldberg, Shakti Ramkissoon, James Suh, Julia A. Elvin, Samuel Chiacchia, Garrett M.
+        Goldberg, Shakti Ramkissoon, James Such, Julia A. Elvin, Samuel Chiacchia, Garrett M.
         Frampton, Jeffrey S. Ross, Vincent Miller, Philip J. Stephens and Doron Lipson
     - Title: |
         Targeted next-generation sequencing of advanced prostate cancer identifies potential
