--- a/datasets/oedi-data-lake.yaml
+++ b/datasets/oedi-data-lake.yaml
@@ -108,7 +108,7 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=dsgrid-2018-efs%2F)'
-  - Description: "[Wind and Structural Loads on Parabolic Trough Solar Collectors at Nevada Solar One](https://data.openei.org/submissions/5938)"
+  - Description: "[Wind and Structural Loads on Parabolic Through Solar Collectors at Nevada Solar One](https://data.openei.org/submissions/5938)"
     ARN: arn:aws:s3:::oedi-data-lake/NSO/
     Region: us-west-2
     Type: S3 Bucket
