--- a/datasets/visym-cap.yaml
+++ b/datasets/visym-cap.yaml
@@ -13,7 +13,7 @@ Tags:
   - privacy
   - activity recognition
   - activity detection
-License: Creative Commons Attribution 4.0 International (CC BY 4.0). Every subject in this dataset has consented to their personally identifable information to be shared publicly for the purpose of advancing computer vision research. Non-consented subjects have their faces blurred out.
+License: Creative Commons Attribution 4.0 International (CC BY 4.0). Every subject in this dataset has consented to their personally identifiable information to be shared publicly for the purpose of advancing computer vision research. Non-consented subjects have their faces blurred out.
 Resources:
   - Description: The Consented Activities of People (CAP) dataset is a fine grained activity dataset for visual AI research curated using the [Visym Collector](https://www.visym.com/collector/) platform. The CAP dataset contains annotated videos of [fine-grained activity classes](https://github.com/visym/cap/blob/main/classification/cap_labels.csv) of consented people. Videos are annotated with bounding box tracks around the primary actor along with temporal start/end frames for each activity instance, and distributed in [vipy](https://visym.github.io/vipy/vipy/) json format.
     ARN: arn:aws:s3:::consented-activities-of-people/train/
