--- a/datasets/vt-opendata.yaml
+++ b/datasets/vt-opendata.yaml
@@ -18,17 +18,17 @@ Tags:
 License: |
   Public Domain with Attribution
 Resources:
-  - Description: Elevation datsets (primarily lidar based) are organized in this bucket as statewide file mosaics and by acquisition year (often a portion of the state in any given year). These data are available in Cloud Optimized GeoTIFF (COG) format and use the following naming convention; 1) Statewide COGs - STATEWIDE_<AQYEAR-AQYEAR>_<RESOLUTION>cm_<DERIVATIVE>, 2) By Acquisition Year - <AQYEAR>_<RESOLUTION>cm_<DERIVATIVE>. Individual tiles are also available as lossless COGs under the ./_Tiles subfolder.
+  - Description: Elevation datasets (primarily lidar based) are organized in this bucket as statewide file mosaics and by acquisition year (often a portion of the state in any given year). These data are available in Cloud Optimized GeoTIFF (COG) format and use the following naming convention; 1) Statewide COGs - STATEWIDE_<AQYEAR-AQYEAR>_<RESOLUTION>cm_<DERIVATIVE>, 2) By Acquisition Year - <AQYEAR>_<RESOLUTION>cm_<DERIVATIVE>. Individual tiles are also available as lossless COGs under the ./_Tiles subfolder.
     ARN: arn:aws:s3:::vtopendata-prd/Elevation
     Region: us-east-2
     Type: S3 Bucket
     RequesterPays: False
-  - Description: Imagery datsets are organized in this bucket as statewide file mosaics and by acquisition year (often a portion of the state in any given year). These data are available in Cloud Optimized GeoTIFF (COG) format and use the following naming convention; 1) Statewide - STATEWIDE_<AQYEAR-AQYEAR>_<RESOLUTION>cm_<LEAFSTATUS>_<#BANDS>Band, 2) By Acquisition Year - <AQYEAR>_<RESOLUTION>cm_<LEAFSTATUS>_<#BANDS>Band. Individual tiles are also available as lossless COGs under the ./_Tiles subfolder.
+  - Description: Imagery datasets are organized in this bucket as statewide file mosaics and by acquisition year (often a portion of the state in any given year). These data are available in Cloud Optimized GeoTIFF (COG) format and use the following naming convention; 1) Statewide - STATEWIDE_<AQYEAR-AQYEAR>_<RESOLUTION>cm_<LEAFSTATUS>_<#BANDS>Band, 2) By Acquisition Year - <AQYEAR>_<RESOLUTION>cm_<LEAFSTATUS>_<#BANDS>Band. Individual tiles are also available as lossless COGs under the ./_Tiles subfolder.
     ARN: arn:aws:s3:::vtopendata-prd/Imagery
     Region: us-east-2
     Type: S3 Bucket
     RequesterPays: False
-  - Description: Landcover datsets are organized in this bucket as statewide file mosaics. These data are available in Cloud Optimized GeoTIFF (COG) format and use the following naming convention STATEWIDE_<AQYEAR>_<RESOLUTION>cm_LANDCOVER_<DerivativeType>.
+  - Description: Landcover datasets are organized in this bucket as statewide file mosaics. These data are available in Cloud Optimized GeoTIFF (COG) format and use the following naming convention STATEWIDE_<AQYEAR>_<RESOLUTION>cm_LANDCOVER_<DerivativeType>.
     ARN: arn:aws:s3:::vtopendata-prd/Landcover
     Region: us-east-2
     Type: S3 Bucket
