[DATALAD RUNCMD] chore: run codespell throughout fixing a few typos interactively
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w -i 3 -C 4",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/datasets/gulfwide-avian-monitoring.yaml
+++ b/datasets/gulfwide-avian-monitoring.yaml
@@ -32,7 +32,7 @@ Resources:
       High resolution(5184 x 3456) images are provided in jpg format
       (compression quality level 98%).
 
-      The avian-monitoring folder includes the high resolution photos, the dotting process screenshots, the dotting information (birds and nest counts by species), and thumbnails of the subset of the images referenced on those dataset. Files in this subfolder have been renamed and organized to have a common naming convension across the years. 
+      The avian-monitoring folder includes the high resolution photos, the dotting process screenshots, the dotting information (birds and nest counts by species), and thumbnails of the subset of the images referenced on those dataset. Files in this subfolder have been renamed and organized to have a common naming convention across the years. 
 
       The top level `High Resolution Images` includes all the high resolution images (even the ones not referenced in the dotting process) with their original filenames. 
     ARN: arn:aws:s3:::twi-aviandata
