--- a/datasets/pacbio-human-wgs-reference.yaml
+++ b/datasets/pacbio-human-wgs-reference.yaml
@@ -7,7 +7,7 @@ Documentation: https://zenodo.org/records/8415406
 Contact: dl_it-awsopendata@pacificbiosciences.com
 ManagedBy: "[Pacific Biosciences of California, Inc](https://www.pacb.com/)"
 UpdateFrequency: |
-    Files are updated to reflect the support for the lastest version of
+    Files are updated to reflect the support for the latest version of
     [PacBio WGS Variant Pipeline]
     (https://github.com/PacificBiosciences/HiFi-human-WGS-WDL)
 Tags:
