--- a/datasets/synthea-omop.yaml
+++ b/datasets/synthea-omop.yaml
@@ -4,7 +4,7 @@ Description: |
   You can read our first academic paper here: [https://doi.org/10.1093/jamia/ocx079](https://doi.org/10.1093/jamia/ocx079)
 Documentation: https://github.com/synthetichealth/synthea/wiki
 Contact: Post any questions to [re:Post](https://repost.aws/tags/questions/TApd0Wl5P8S9O6riTWmh-cGw/aws-open-data) and use the `AWS Open Data` tag.
-ManagedBy: '[Amazon Web Sevices](https://aws.amazon.com/)'
+ManagedBy: '[Amazon Web Services](https://aws.amazon.com/)'
 UpdateFrequency: Not updated
 Tags:
   - aws-pds
