ok: Update noaa-s104.yaml

--- a/datasets/noaa-s104.yaml
+++ b/datasets/noaa-s104.yaml
@@ -16,19 +16,10 @@ Contact: |
 Collabs:
 Tags:
   - aws-pds
-  - s-100
-  - s-104
-  - water level
-  - surface navigation
   - marine navigation
-  - harbor navigation
   - hydrography
-  - ocean
+  - oceans
   - coastal
-  - forecast guidance
-  - hydrodynamic model
-  - STOFS-2D-Global
-  - surge and tide operational forecast system
 
 Resources:
   - Description: "NOAA S-104 Water Level for Surface Navigation Datasets"
