--- a/datasets/noaa-s104.yaml
+++ b/datasets/noaa-s104.yaml
@@ -14,6 +14,9 @@ Contact: |
   For any data delivery issues, please contact the NOAA Open Data Dissemination Team at: nodd@noaa.gov. For general questions or feedback about the data, please submit inquiries through the NOAA Office of Coast Survey (OCS) ASSIST Tool at https://www.nauticalcharts.noaa.gov/customer-service/assist/.
   We also seek to identify case studies on how NOAA data is being used and will be featuring those stories in joint publications and in upcoming events. If you are interested in seeing your story highlighted, please share it with the NOAA NODD team at nodd@noaa.gov.
 Collabs:
+  ASDI:
+    Tags:
+      - weather
 Tags:
   - aws-pds
   - marine navigation
