Fixup AuthorName entry for NWB Explorer

--- a/datasets/dandiarchive.yaml
+++ b/datasets/dandiarchive.yaml
@@ -76,7 +76,7 @@ DataAtWork:
       AuthorURL: https://www.simonsfoundation.org/flatiron/
     - Title: NWB Explorer
       URL: https://nwbexplorer.opensourcebrain.org/
-      AuthorName: MetaCell
+      AuthorName: Open Source Brain
       AuthorURL: https://metacell.us/
     - Title: Neuroglancer
       URL: https://github.com/google/neuroglancer
