--- a/datasets/wpto-pds-us-wave.yaml
+++ b/datasets/wpto-pds-us-wave.yaml
@@ -81,6 +81,18 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=wpto-pds-us-wave&prefix=v1.0.0%2FGulf_of_Mexico_and_Puerto_Rico%2F)'
+  - Description: Updated version of 42 Year Wave Hindcast (1979-2020) for Alaska at 3-hour temporal resolution and down to 200m spatial resolution in [HDF5](https://portal.hdfgroup.org/display/HDF5/HDF5) format. Updates resolve issues with NaNs.
+    ARN: arn:aws:s3:::wpto-pds-us-wave/v1.0.1/Alaska/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=wpto-pds-us-wave&prefix=v1.0.1%2FAlaska%2F)'
+  - Description: Updated version of 42 Year Wave Hindcast (1979-2020) for the West Coast of the United States at 3-hour temporal resolution and down to 200m spatial resolution in [HDF5](https://portal.hdfgroup.org/display/HDF5/HDF5) format. Updates resolve issues with NaNs.
+    ARN: arn:aws:s3:::wpto-pds-us-wave/v1.0.1/West_Coast/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=wpto-pds-us-wave&prefix=v1.0.1%2FWest_Coast%2F)'
 DataAtWork:
   Tutorials:
   Tools & Applications:
@@ -109,3 +121,4 @@ DataAtWork:
     - Title: Development and validation of a regional-scale high-resolution unstructured model for wave energy resource characterization along the US East Coast
       URL: https://doi.org/10.1016/j.renene.2019.01.020
       AuthorName: Allahdadi, M.N., Gunawan, J. Lai, R. He, V.S. Neary
+
