ok: Update anvilproject.yaml

--- a/datasets/anvilproject.yaml
+++ b/datasets/anvilproject.yaml
@@ -36,7 +36,7 @@ Citation: "Schatz MC, Philippakis AA, Afgan E, Banks E, Carey VJ, Carroll RJ, et
 
 Resources:
   - Description: "An S3 bucket containing all publicly accessible data files in the AnVIL Project. The bucket layout and access procedures are documented at https://github.com/DataBiosphere/azul/blob/develop/docs/mirror.rst and metadata can be viewed at https://explore.anvilproject.org/datasets or accessed programmatically at https://service.explore.anvilproject.org/"
-    ARN: arn:aws:s3:::humancellatlas
+    ARN: arn:aws:s3:::anvilproject
     Region: us-east-1
     Type: S3 Bucket
     Explore:
