--- a/datasets/opentargets.yaml
+++ b/datasets/opentargets.yaml
@@ -5,15 +5,13 @@ Contact: outreach@opentargets.org
 ManagedBy: Open Targets
 UpdateFrequency: The data is released every three months.
 Tags:
-  - drug targets
-  - drug discovery
-  - therapeutics
-  - targets
-  - diseases
-  - drugs
-  - gentropy
-  - variants
-  - credible sets
+  - target discovery
+  - genetics
+  - drug development
+  - disease
+  - GWAS
+  - tractability
+  - safety
 License: https://creativecommons.org/publicdomain/zero/1.0/
 Resources:
   - Description: Open Targets Data
