ok: Update opentargets.yaml

--- a/datasets/opentargets.yaml
+++ b/datasets/opentargets.yaml
@@ -5,13 +5,14 @@ Contact: outreach@opentargets.org
 ManagedBy: Open Targets
 UpdateFrequency: The data is released every three months.
 Tags:
-  - target discovery
+  - drug discovery
   - genetics
-  - drug development
-  - disease
-  - GWAS
-  - tractability
-  - safety
+  - life sciences
+  - genomic
+  - aws-pds
+  - bioinformatics
+  - biology
+  - protein
 License: https://creativecommons.org/publicdomain/zero/1.0/
 Resources:
   - Description: Open Targets Data
