ok: Update opentargets.yaml

--- a/datasets/opentargets.yaml
+++ b/datasets/opentargets.yaml
@@ -12,6 +12,7 @@ Tags:
   - bioinformatics
   - biology
   - protein
+  - drug discovery
 License: https://creativecommons.org/publicdomain/zero/1.0/
 Resources:
   - Description: Open Targets Data
