ok: Update opentargets.yaml

--- a/datasets/opentargets.yaml
+++ b/datasets/opentargets.yaml
@@ -5,7 +5,7 @@ Contact: outreach@opentargets.org
 ManagedBy: Open Targets
 UpdateFrequency: The data is released every three months.
 Tags:
-  - genetics
+  - genetic
   - life sciences
   - genomic
   - aws-pds
